--- a/arch/municourt/uploadDialerNotices/index.html
+++ b/arch/municourt/uploadDialerNotices/index.html
@@ -98,67 +98,67 @@ XML file format (example for STPP):<br>&nbsp;<br>
 &lt;?xml version="1.0" encoding="UTF-8"?&gt;<br>
 &lt;Broadcast&gt;<br>
 &lt;Configuration&gt;<br>
-&lt;BroadcastName&gt;<br>STP_PastDue_Notice&lt;/BroadcastName&gt;<br>
-&lt;Description&gt;<br>For STP Past Due Extensions&lt;/Description&gt;<br>
-&lt;DailyStartTime&gt;<br>0900&lt;/DailyStartTime&gt;<br>
-&lt;DailyEndTime&gt;<br>1730&lt;/DailyEndTime&gt;<br>
-&lt;Priority&gt;<br>Normal&lt;/Priority&gt;<br>
-&lt;PortCapacity&gt;<br>Standard&lt;/PortCapacity&gt;<br>
-&lt;CallerID&gt;<br>5129744800&lt;/CallerID&gt;<br>
-&lt;TransferNumber&gt;<br>5129744800&lt;/TransferNumber&gt;<br>
-&lt;LeaveVoicemail&gt;<br>true&lt;/LeaveVoicemail&gt;<br>
-&lt;MaxRetry&gt;<br>3&lt;/MaxRetry&gt;<br>
-&lt;AvailableTransferPorts&gt;<br>1&lt;/AvailableTransferPorts&gt;<br>
-&lt;UseExpiration&gt;<br>true&lt;/UseExpiration&gt;<br>
-&lt;MinRetryDuration&gt;<br>ThirtyMinutes&lt;/MinRetryDuration&gt;<br>
-&lt;Message&gt;<br>This is the Austin Municipal Court calling [[name]] advising that a payment is past due for payment plan account number [[payacctnbr]]. Make your payment immediately online, visit W W W dot Austin Texas dot gov slash public or call [[clerk]] between 8 a m and 5 p m&lt;/Message&gt;<br>
+&lt;BroadcastName&gt;STP_PastDue_Notice&lt;/BroadcastName&gt;<br>
+&lt;Description&gt;For STP Past Due Extensions&lt;/Description&gt;<br>
+&lt;DailyStartTime&gt;0900&lt;/DailyStartTime&gt;<br>
+&lt;DailyEndTime&gt;1730&lt;/DailyEndTime&gt;<br>
+&lt;Priority&gt;Normal&lt;/Priority&gt;<br>
+&lt;PortCapacity&gt;Standard&lt;/PortCapacity&gt;<br>
+&lt;CallerID&gt;5129744800&lt;/CallerID&gt;<br>
+&lt;TransferNumber&gt;5129744800&lt;/TransferNumber&gt;<br>
+&lt;LeaveVoicemail&gt;true&lt;/LeaveVoicemail&gt;<br>
+&lt;MaxRetry&gt;3&lt;/MaxRetry&gt;<br>
+&lt;AvailableTransferPorts&gt;1&lt;/AvailableTransferPorts&gt;<br>
+&lt;UseExpiration&gt;true&lt;/UseExpiration&gt;<br>
+&lt;MinRetryDuration&gt;ThirtyMinutes&lt;/MinRetryDuration&gt;<br>
+&lt;Message&gt;This is the Austin Municipal Court calling [[name]] advising that a payment is past due for payment plan account number [[payacctnbr]]. Make your payment immediately online, visit W W W dot Austin Texas dot gov slash public or call [[clerk]] between 8 a m and 5 p m&lt;/Message&gt;<br>
 &lt;/Configuration&gt;<br>
 &lt;ContactList&gt;<br>
 &lt;Contact&gt;<br>
 &lt;PhoneNumberList&gt;<br>
-&lt;PhoneNumber&gt;<br>PhoneNumber&lt;/PhoneNumber&gt;<br>
+&lt;PhoneNumber&gt;PhoneNumber&lt;/PhoneNumber&gt;<br>
 &lt;/PhoneNumberList&gt;<br>
 &lt;MergeValueList&gt;<br>
 &lt;MergeValue&gt;<br>
-&lt;Type&gt;<br>Text&lt;/Type&gt;<br>
-&lt;Name&gt;<br>name&lt;/Name&gt;<br>
-&lt;Value&gt;<br>&lt;/Value&gt;<br>
+&lt;Type&gt;Text&lt;/Type&gt;<br>
+&lt;Name&gt;name&lt;/Name&gt;<br>
+&lt;Value&gt;&lt;/Value&gt;<br>
 &lt;CompiledFieldState /&gt;<br>
 &lt;/MergeValue&gt;<br>
 &lt;MergeValue&gt;<br>
-&lt;Type&gt;<br>Characters&lt;/Type&gt;<br>
-&lt;Name&gt;<br>pid&lt;/Name&gt;<br>
-&lt;Value&gt;<br>&lt;/Value&gt;<br>
+&lt;Type&gt;Characters&lt;/Type&gt;<br>
+&lt;Name&gt;pid&lt;/Name&gt;<br>
+&lt;Value&gt;&lt;/Value&gt;<br>
 &lt;CompiledFieldState /&gt;<br>
 &lt;/MergeValue&gt;<br>
 &lt;MergeValue&gt;<br>
-&lt;Type&gt;<br>Characters&lt;/Type&gt;<br>
-&lt;Name&gt;<br>Clerk&lt;/Name&gt;<br>
-&lt;Value&gt;<br>&lt;/Value&gt;<br>
+&lt;Type&gt;Characters&lt;/Type&gt;<br>
+&lt;Name&gt;Clerk&lt;/Name&gt;<br>
+&lt;Value&gt;&lt;/Value&gt;<br>
 &lt;CompiledFieldState /&gt;<br>
 &lt;/MergeValue&gt;<br>
 &lt;MergeValue&gt;<br>
-&lt;Type&gt;<br>Characters&lt;/Type&gt;<br>
-&lt;Name&gt;<br>PhoneNumber&lt;/Name&gt;<br>
-&lt;Value&gt;<br>&lt;/Value&gt;<br>
+&lt;Type&gt;Characters&lt;/Type&gt;<br>
+&lt;Name&gt;PhoneNumber&lt;/Name&gt;<br>
+&lt;Value&gt;&lt;/Value&gt;<br>
 &lt;CompiledFieldState /&gt;<br>
 &lt;/MergeValue&gt;<br>
 &lt;MergeValue&gt;<br>
-&lt;Type&gt;<br>Characters&lt;/Type&gt;<br>
-&lt;Name&gt;<br>CaseNumber&lt;/Name&gt;<br>
-&lt;Value&gt;<br>&lt;/Value&gt;<br>
+&lt;Type&gt;Characters&lt;/Type&gt;<br>
+&lt;Name&gt;CaseNumber&lt;/Name&gt;<br>
+&lt;Value&gt;&lt;/Value&gt;<br>
 &lt;CompiledFieldState /&gt;<br>
 &lt;/MergeValue&gt;<br>
 &lt;MergeValue&gt;<br>
-&lt;Type&gt;<br>Characters&lt;/Type&gt;<br>
-&lt;Name&gt;<br>CaseActionSeqNumber&lt;/Name&gt;<br>
-&lt;Value&gt;<br>&lt;/Value&gt;<br>
+&lt;Type&gt;Characters&lt;/Type&gt;<br>
+&lt;Name&gt;CaseActionSeqNumber&lt;/Name&gt;<br>
+&lt;Value&gt;&lt;/Value&gt;<br>
 &lt;CompiledFieldState /&gt;<br>
 &lt;/MergeValue&gt;<br>
 &lt;/MergeValueList&gt;<br>
 &lt;/Contact&gt;<br>
 &lt;/ContactList&gt;<br>
-&lt;/Broadcast&gt;<br>
+&lt;/Broadcast&gt;
 </td>
 </tr>
 <tr>
