--- a/arch/municourt/manageDialerNoticesIO/index.html
+++ b/arch/municourt/manageDialerNoticesIO/index.html
@@ -61,7 +61,7 @@ overall dialer notification process. The dialer notification process monitors ca
 <!-- IF INTERACTION OVERVIEW IS INCLUDED -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <span class="lbl">Select to enlarge...</span><br />
-<a href="/austinea/arch/municourt/manageDialerNoticesIO/io_detail.jpg"><img src="/austinea/arch/municourt/manageDialerNoticesIO/io_detail.jpg" border="0" alt="" /></a><br />
+<a href="/austinea/arch/municourt/manageDialerNoticesIO/io_detail.jpg"><img src="/austinea/arch/municourt/manageDialerNoticesIO/io_detail.jpg" style="width:750px;height:574px;" border="0" alt="" /></a><br />
 <span style="font-weight: bold;">Manage Dialer Notices Interaction Overview (including buffers))</span>
 </td></tr></table>
 <br/>
