--- a/arch/municourt/uploadDialerNotices/index.html
+++ b/arch/municourt/uploadDialerNotices/index.html
@@ -113,52 +113,70 @@ XML file format (example for STPP):<br>&nbsp;<br>
 &lt;MinRetryDuration&gt;ThirtyMinutes&lt;/MinRetryDuration&gt;<br>
 &lt;Message&gt;This is the Austin Municipal Court calling [[name]] advising that a payment is past due for payment plan account number [[payacctnbr]]. Make your payment immediately online, visit W W W dot Austin Texas dot gov slash public or call [[clerk]] between 8 a m and 5 p m&lt;/Message&gt;<br>
 &lt;/Configuration&gt;<br>
-&lt;ContactList&gt;<br>
-&lt;Contact&gt;<br>
-&lt;PhoneNumberList&gt;<br>
-&lt;PhoneNumber&gt;PhoneNumber&lt;/PhoneNumber&gt;<br>
-&lt;/PhoneNumberList&gt;<br>
-&lt;MergeValueList&gt;<br>
-&lt;MergeValue&gt;<br>
-&lt;Type&gt;Text&lt;/Type&gt;<br>
-&lt;Name&gt;name&lt;/Name&gt;<br>
-&lt;Value&gt;&lt;/Value&gt;<br>
-&lt;CompiledFieldState /&gt;<br>
-&lt;/MergeValue&gt;<br>
-&lt;MergeValue&gt;<br>
-&lt;Type&gt;Characters&lt;/Type&gt;<br>
-&lt;Name&gt;pid&lt;/Name&gt;<br>
-&lt;Value&gt;&lt;/Value&gt;<br>
-&lt;CompiledFieldState /&gt;<br>
-&lt;/MergeValue&gt;<br>
-&lt;MergeValue&gt;<br>
-&lt;Type&gt;Characters&lt;/Type&gt;<br>
-&lt;Name&gt;Clerk&lt;/Name&gt;<br>
-&lt;Value&gt;&lt;/Value&gt;<br>
-&lt;CompiledFieldState /&gt;<br>
-&lt;/MergeValue&gt;<br>
-&lt;MergeValue&gt;<br>
-&lt;Type&gt;Characters&lt;/Type&gt;<br>
-&lt;Name&gt;PhoneNumber&lt;/Name&gt;<br>
-&lt;Value&gt;&lt;/Value&gt;<br>
-&lt;CompiledFieldState /&gt;<br>
-&lt;/MergeValue&gt;<br>
-&lt;MergeValue&gt;<br>
-&lt;Type&gt;Characters&lt;/Type&gt;<br>
-&lt;Name&gt;CaseNumber&lt;/Name&gt;<br>
-&lt;Value&gt;&lt;/Value&gt;<br>
-&lt;CompiledFieldState /&gt;<br>
-&lt;/MergeValue&gt;<br>
-&lt;MergeValue&gt;<br>
-&lt;Type&gt;Characters&lt;/Type&gt;<br>
-&lt;Name&gt;CaseActionSeqNumber&lt;/Name&gt;<br>
-&lt;Value&gt;&lt;/Value&gt;<br>
-&lt;CompiledFieldState /&gt;<br>
-&lt;/MergeValue&gt;<br>
-&lt;/MergeValueList&gt;<br>
-&lt;/Contact&gt;<br>
-&lt;/ContactList&gt;<br>
-&lt;/Broadcast&gt;
+&lt;?xml version="1.0" encoding="utf-8"?&gt;<br>
+&lt;xs:schema attributeFormDefault="unqualified" elementFormDefault="qualified" xmlns:xs="http://www.w3.org/2001/XMLSchema"&gt;<br>
+  &lt;xs:element name="Broadcast"&gt;<br>
+    &lt;xs:complexType&gt;<br>
+      &lt;xs:sequence&gt;<br>
+        &lt;xs:element name="Configuration"&gt;<br>
+          &lt;xs:complexType&gt;<br>
+            &lt;xs:sequence&gt;<br>
+              &lt;xs:element name="BroadcastName" type="xs:string" /&gt;<br>
+              &lt;xs:element name="Description" type="xs:string" /&gt;<br>
+              &lt;xs:element name="DailyStartTime" type="xs:unsignedShort" /&gt;<br>
+              &lt;xs:element name="DailyEndTime" type="xs:unsignedShort" /&gt;<br>
+              &lt;xs:element name="Priority" type="xs:string" /&gt;<br>
+              &lt;xs:element name="PortCapacity" type="xs:string" /&gt;<br>
+              &lt;xs:element name="CallerID" type="xs:unsignedLong" /&gt;<br>
+              &lt;xs:element name="TransferNumber" type="xs:unsignedLong" /&gt;<br>
+              &lt;xs:element name="LeaveVoicemail" type="xs:boolean" /&gt;<br>
+              &lt;xs:element name="MaxRetry" type="xs:unsignedByte" /&gt;<br>
+              &lt;xs:element name="AvailableTransferPorts" type="xs:unsignedByte" /&gt;<br>
+              &lt;xs:element name="UseExpiration" type="xs:boolean" /&gt;<br>
+              &lt;xs:element name="MinRetryDuration" type="xs:string" /&gt;<br>
+              &lt;xs:element name="Message" type="xs:string" /&gt;<br>
+            &lt;/xs:sequence&gt;<br>
+          &lt;/xs:complexType&gt;<br>
+        &lt;/xs:element&gt;<br>
+        &lt;xs:element name="ContactList"&gt;<br>
+          &lt;xs:complexType&gt;<br>
+            &lt;xs:sequence&gt;<br>
+              &lt;xs:element maxOccurs="unbounded" name="Contact"&gt;<br>
+                &lt;xs:complexType&gt;<br>
+                  &lt;xs:sequence&gt;<br>
+                    &lt;xs:element name="PhoneNumberList"&gt;<br>
+                      &lt;xs:complexType&gt;<br>
+                        &lt;xs:sequence&gt;<br>
+                          &lt;xs:element name="PhoneNumber" type="xs:string" /&gt;<br>
+                        &lt;/xs:sequence&gt;<br>
+                      &lt;/xs:complexType&gt;<br>
+                    &lt;/xs:element&gt;<br>
+                    &lt;xs:element name="MergeValueList"&gt;<br>
+                      &lt;xs:complexType&gt;<br>
+                        &lt;xs:sequence&gt;<br>
+                          &lt;xs:element maxOccurs="unbounded" name="MergeValue"&gt;<br>
+                            &lt;xs:complexType&gt;<br>
+                              &lt;xs:sequence&gt;<br>
+                                &lt;xs:element name="Type" type="xs:string" /&gt;<br>
+                                &lt;xs:element name="Name" type="xs:string" /&gt;<br>
+                                &lt;xs:element name="Value" type="xs:string" /&gt;<br>
+                                &lt;xs:element name="CompiledFieldState" /&gt;<br>
+                              &lt;/xs:sequence&gt;<br>
+                            &lt;/xs:complexType&gt;<br>
+                          &lt;/xs:element&gt;<br>
+                        &lt;/xs:sequence&gt;<br>
+                      &lt;/xs:complexType&gt;<br>
+                    &lt;/xs:element&gt;<br>
+                  &lt;/xs:sequence&gt;<br>
+                &lt;/xs:complexType&gt;<br>
+              &lt;/xs:element&gt;<br>
+            &lt;/xs:sequence&gt;<br>
+          &lt;/xs:complexType&gt;<br>
+        &lt;/xs:element&gt;<br>
+      &lt;/xs:sequence&gt;<br>
+    &lt;/xs:complexType&gt;<br>
+  &lt;/xs:element&gt;<br>
+&lt;/xs:schema&gt;
 </td>
 </tr>
 <tr>
