terri roberts change

--- a/arch/code/inspectLodgingBusiness/index.html
+++ b/arch/code/inspectLodgingBusiness/index.html
@@ -70,7 +70,7 @@
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>Follow-up Inspection for Lodging License: The Austin Code Officer checks for GFCI outlets, smoke detectors (set off and sound), trip hazards, cracked windows, broken windows, weather stripping, temperature of hot water, pest infestation, secured balcony railing, overhead light inspection outside, loose shower spouts, secured toilet, faucet handles, locks on windows (if three feet up). Ten percent of the total rooms are inspected. Checklist: Structure Maintenance Report.
+<td>Follow-up Inspection for Lodging License: The Austin Code Officer checks for GFCI outlets, smoke detectors (set off and sound), trip hazards, cracked windows, broken windows, weather stripping, temperature of hot water, pest infestation, secured balcony railing, overhead light inspection outside, loose shower spouts, secured toilet, faucet handles, locks on windows (if three feet up). Ten percent of the total rooms are inspected, unless total number of rooms is ten or less, then all rooms are inspected. . Checklist: Structure Maintenance Report.
 The Austin Code Officer takes photographs to document the Inspection.</td>
 </tr>
 <tr>
