terri roberts changes.

--- a/arch/code/inspectIllegalDumping/index.html
+++ b/arch/code/inspectIllegalDumping/index.html
@@ -120,8 +120,7 @@ If Illegal Dumping, the Austin Code Officer ensures property is abated and takes
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Officer uses the Case Management System to create a IllegalDumpingCase. The Austin Code Officer provides the Location, Photographs (Surveillance Camera, Austin Code Officer photos taken at site, clean up), Inspection, Synopsis of dumped items, Offender (if available), information on Property Abatement, and Citation (if Offender identified).
-If Offender identified the IllegalDumpingCase remains open until the LegalCase is completed.</td>
+<td>The Austin Code Officer uses the Case Management System to create an IllegalDumpingCase. The Austin Code Officer provides the location, photographs (from the Surveillance Camera, the Austin Code Officer’s photos taken at the site, and the clean-up photos), inspection, synopsis of dumped items, Offender (if available), information on property abatement, and the citation (if Offender identified). If Offender is identified, the IllegalDumpingCase remains open until either Offender abates illegal dumping or the LegalCase is completed.</td>
 </tr>
 <tr>
 <td rowspan="2">008</td>
@@ -129,7 +128,7 @@ If Offender identified the IllegalDumpingCase remains open until the LegalCase i
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Officer requests the Case Management System close the IllegalDumpingCase. Cases are closed if no Offender is identified and property is abated; or, if the Offender is identified, after the LegalCase is closed.</td>
+<td>The Austin Code Officer requests the Case Management System close the IllegalDumpingCase. Cases are closed if no Offender is identified and property is abated; or, if the Offender is identified, after the LegalCase is closed. The Austin code officer requests a soft close once the illegal dumping has been abated and a disposition on the legal case has been filed with the Austin Municipal court. </td>
 
 </tr>
 
