Terri Roberts Changes

--- a/arch/code/inspectRepeatOffenderViolation/index.html
+++ b/arch/code/inspectRepeatOffenderViolation/index.html
@@ -81,7 +81,7 @@ If the Repeat Offender satisfies the requirements for the Repeat Offender progra
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Officer performs research on the Property (such as case history and NoticeOfViolation) to determine if someone is a Repeat Offender-criteria is two Citations in two years, or five NoticeOfViolations in two years, or two violations not met in a timely manner in two years.</td>
+<td>The Austin Code Officer performs research on the Property (such as case history and NoticeOfViolation) to determine if the property is a Repeat Offender—criteria is two Citations in two years, or five NoticeOfViolations in two years, or two violations not met in a timely manner in two years. [This is 2/5/2 criteria].</td>
 </tr>
 <tr>
 <td rowspan="2">002</td>
@@ -120,7 +120,7 @@ If the Repeat Offender satisfies the requirements for the Repeat Offender progra
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Program Specialist creates a ROPCase in the system, and provides Property, Responsible Party, reason for repeat offender, and the required registration letter is saved as an attachment.</td>
+<td>The Austin Code Program Specialist creates an ROPCase in the Case Management system, and provides Property, Responsible Party, reason for repeat offender, and the required registration letter is saved as an attachment.</td>
 </tr>
 <tr>
 <td rowspan="2">007</td>
@@ -184,7 +184,7 @@ If the Repeat Offender satisfies the requirements for the Repeat Offender progra
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Responsible Party fills out a RepeatOffenderApplication (Owner, Owner Name, address, phone number, and Property Manager/Regional Manager/Owner information) and mails it to Austin Code Finance. RepeatOffenderApplication has a $100 registration fee.</td>
+<td>The Responsible Party fills out a RepeatOffenderApplication (Owner, Owner Name, address, phone number, and Property Manager/Regional Manager/Owner information) and mails it to Austin Code Finance. RepeatOffenderApplication has a registration fee.</td>
 </tr>
 <tr>
 <td rowspan="2">015</td>
@@ -216,7 +216,7 @@ If the Repeat Offender satisfies the requirements for the Repeat Offender progra
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Public Information Office Admin requests the GIS Analyst to update the RepeatOffendMap.</td>
+<td>The Chain of Command submits a ticket requesting the GIS Analyst to update the RepeatOffendMap.</td>
 </tr>
 <tr>
 <td rowspan="2">019</td>
