Terri Roberts changes

--- a/arch/code/inspectWasteHauler/index.html
+++ b/arch/code/inspectWasteHauler/index.html
@@ -68,7 +68,10 @@
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>If the violation concerns hazardous conditions, the Austin Code Officer applies Personal Protective Equipment (PPE). The Austin Code Officer inspects the Property. The Austin Code Officer inspects from the exterior (initially from the Right of Way) to the interior (if the interior is accessible and permission has been granted by legally interested party or someone in Care/Control of Property). The Austin Code Officer take Photographs and Measurements (hot water temperature, air quality, interior temperature, light meter, ground-fault circuit interrupter, gas meter, carbon monoxide, smoke detector, fences, grass height, driveway and walkways, check impervious cover, etc.) as needed. As needed, the Austin Code Officer performs research to identify the Property Owner, Offense, ViolationType, OwnerInformation, and relevant PropertyInformation (GIS system, ARR Site, Annexation Information, Amanda Permit History, Site Plan, TCAD/WCAD for OwnerHistory and DeedHistory, CC&B, ZoningHistory, CodeOfOrdinances, etc.). The Austin Code Officer interviews relevant parties. For Waste Hauler Inspection: The Austin Code Officer makes contact with driver, visually inspects vehicle for decals on door, asks driver about awareness requirement for waste hauler license, ensures driver is operating within City of Austin (outside of city exempt), double check the Waste Hauler license, check for safety equipment violations, driver's license of driver, and take photos of truck (including both doors and front license plate). If a short-term rental complaint, the Austin Code Officer responds at a faster time than other complaints. On Fridays and Saturdays, the Austin Code Officer performs inspection during day, ands from 6:00 P.M. - 2:00 A.M. On Sundays, inspections occur from 8:00 A.M. - 12:00 P.M.</td></td>
+<td>If the violation concerns hazardous conditions, the Austin Code Officer uses Personal Protective Equipment (PPE). The Austin Code Officer inspects the Property. The Austin Code Officer inspects from the exterior (initially from the right of way) to the interior (if the interior is accessible and permission has been granted by legally interested party or someone in Care/Control of Property). The Austin Code Officer takes photographs and measurements as needed (hot water temperature, air quality, interior temperature, light meter, ground-fault circuit interrupter, gas meter, carbon monoxide, smoke detector, fences, grass height, driveway and walkways, checks impervious cover, etc.). As needed, the Austin Code Officer performs research to identify the Property Owner, offense, ViolationType, OwnerInformation, and relevant PropertyInformation (GIS system, ARR Site, annexation information, AMANDA permit history, site plan, TCAD/WCAD for OwnerHistory and DeedHistory, CC&B, ZoningHistory, CodeOfOrdinances, etc.). The Austin Code Officer interviews relevant parties. 
+For Waste Hauler Inspection: The Austin Code Officer makes contact with driver, visually inspects vehicle for decals on door, asks driver about awareness requirement for waste hauler license, ensures driver is operating within City of Austin (outside of city exempt), double checks the Waste Hauler license, driver's license of driver, and takes photos of truck (including both doors and front license plate). The Austin Code Officer performs research to identify the business owner, Offense, Violation Type, Owner Information, and relevant Information. 
+If a short-term rental complaint, the Austin Code Officer responds more quickly than other complaints. On Fridays and Saturdays, the Austin Code Officer performs inspection during day, and from 6:00 p.m. - 2:00 a.m. On Sundays, inspections occur from 8:00 a.m. - 12:00 p.m. 
+NOTE: Inspection times for STRs should be updated and are subject to change. </td></td>
 </tr>
 <tr>
 <td rowspan="2">002</td>
@@ -92,7 +95,8 @@
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Officer issues a Warning to the Violator. Note: Warnings are non-legal notices. A NoticeOfViolation is still required after a Warning is issued.</td>
+<td>The Austin Code Officer issues a warning to the Violator. Note: Warnings are non-legal notices. A NoticeOfViolation is still required after a warning is issued. Note a warning is not required prior to issuing a citation for operating without a valid Waste Hauler License. 
+NOTE: A warning may serve as a legal notice, pending Law Department review. </td>
 </tr>
 <tr>
 <td rowspan="2">005</td>
@@ -101,7 +105,7 @@
 </tr>
 <tr>
 <td>Follow-up Inspection for Lodging License: The Austin Code Officer checks for GFCI outlets, smoke detectors (set off and sound), trip hazards, cracked windows, broken windows, weather stripping, temperature of hot water, pest infestation, secured balcony railing, overhead light inspection outside, loose shower spouts, secured toilet, faucet handles, locks on windows (if three feet up). Ten percent of the total rooms are inspected. Checklist: Structure Maintenance Report.
-Follow-up inspection for Waste Hauler: A WasteHaulerApplication is turned in, and the Austin Code Officer works with the Austin Code Program Specialist to ensure the WasteHaulerApplication is complete. The Austin Code Officer performs an Inspection to determine if the Waste Hauler Violation was resolved.
+Follow-up inspection for Waste Hauler: A WasteHaulerApplication is turned in, and the Austin Code Officer works with the Austin Code Program Specialist to ensure the WasteHaulerApplication is complete. The Austin Code Officer performs an Inspection to determine if the Waste Hauler Violation was resolved. The Austin Code Officer performs Follow up research to determine if the Waste Hauler Violation was resolved.
 If Illegal Dumping, the Austin Code Officer ensures property is abated.
 The Austin Code Officer takes photographs to document the Inspection.</td>
 </tr>
