Terri Roberts Changes

--- a/arch/code/inspectZoningLandUseViolation/index.html
+++ b/arch/code/inspectZoningLandUseViolation/index.html
@@ -70,7 +70,7 @@
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Officer determines the specific Zoning or Land Use Violation. Possible violation types include work without permit (mechanical, electrical, plumbing, and building). Other land use violations include (site plans, wrong/changed/missing certificate of occupancy, site plan exemptions, change of use, compatibility standards, permits and licensing, etc.).</td>
+<td>The Austin Code Officer determines the specific Zoning or Land Use Violation. Possible violation types include work without permit (mechanical, electrical, plumbing, and building). Other land use violations include (site plans, incorrect/changed/missing certificate of occupancy, site plan exemptions, change of use, compatibility standards, permits and licensing, etc.).</td>
 </tr>
 <tr>
 <td rowspan="2">002</td>
@@ -150,7 +150,7 @@ The Austin Code Officer updates the CodeViolationCase with information concernin
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Officer follows up (phone or email) with Planning and Development review group to confirm revocation of appropriate permit/certificate. Austin Code Officer performs follow up based on Severity and Disposition of Issue.</td>
+<td>The Austin Code Officer follows up (phone or email) with Permitting department to confirm revocation of appropriate permit/certificate. Austin Code Officer performs follow up based on Severity and Disposition of Issue.</td>
 </tr>
 
 <tr>
