terri roberts changes

--- a/arch/code/issueWasteHaulerLicense/index.html
+++ b/arch/code/issueWasteHaulerLicense/index.html
@@ -83,7 +83,7 @@ When the CertifiedMailNumber (receipt of delivery) is received the Austin Code P
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>311 Contacts the Austin Code Program Specialist, and indicates a potential Waste Hauler has requested an application. The Austin Code Program Specialist will call the Waste Hauler, confirming the information provide, and then sends via US Postal a Waste Hauler Application. Note: the Waste Hauler can request the application be emailed, but the Austin Code Specialist will still send this via US Postal as well. This is sent certified mail.</td>
+<td>311 Contacts the Austin Code Program Specialist, and indicates a potential Waste Hauler has requested an application. The Austin Code Program Specialist will call the Waste Hauler, confirming the information provided, and then sends via US Postal a Waste Hauler Application. Note: the Waste Hauler can request the application be emailed, but the Austin Code Specialist will still send this via US Postal as well. This is sent certified mail.</td>
 </tr>
 <tr>
 <td rowspan="2">003</td>
@@ -112,7 +112,7 @@ When the CertifiedMailNumber (receipt of delivery) is received the Austin Code P
 </tr>
 <tr>
 <td rowspan="2">006</td>
-<td style="font-weight: bold; background: lightgray;">Austin Code Program Specialist/processWasteHaulerApplication<</td>
+<td style="font-weight: bold; background: lightgray;">Austin Code Program Specialist/processWasteHaulerApplication</td>
 <td rowspan="2">  </td>
 </tr>
 <tr>
@@ -124,15 +124,15 @@ When the CertifiedMailNumber (receipt of delivery) is received the Austin Code P
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Program Specialist reviews the WasteHaulerApplication using a checklist (is notarized, all information is complete, insurance, inspection, check, container information, signature for Austin Code Program Specialist, how many licenses issued: 1 per vehicle). verifying presence of insurance forms, inspection reports, tonnage reports, and vehicle information.</td>
+<td>The Austin Code Program Specialist reviews the WasteHaulerApplication using a checklist (is notarized, all information is complete, insurance, inspection, payment instrument, signature of Austin Code Program Specialist, how many licenses issued: 1 per vehicle). verifying presence of insurance forms, inspection reports, tonnage reports, and vehicle information.</td>
 </tr>
 <tr>
 <td rowspan="2">008</td>
-<td style="font-weight: bold; background: lightgray;">Waste Hauler/submitNewCheck</td>
+<td style="font-weight: bold; background: lightgray;">Austin Code Program Specialist/receiveNewCheck</td>
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Program Specialist determines the amount paid was less than required and request additional funds. Note the Waste Hauler does not need to resubmit the application in this case. </td>
+<td>The Austin Code Program Specialist determines the amount paid was less than required and requests additional funds. Note the Waste Hauler does not need to resubmit the application in this case. </td>
 </tr>
 <tr>
 <td rowspan="2">009</td>
@@ -174,17 +174,9 @@ The AustinCode Program Specialist uses the Case Management system to update the 
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Specialist send via US Postal Certified mail, the Waste Hauler licenses. </td>
+<td>The Austin Code Specialist sends via US Postal Certified mail, the Waste Hauler licenses. </td>
 </tr>
-<tr>
-<td rowspan="2">014</td>
-<td style="font-weight: bold; background: lightgray;">Case Management System/createUpdateWasteHaulerLicense</td>
-<td rowspan="2">  </td>
-</tr>
-<tr>
-<td>The AustinCode Program Specialist uses the Case Management system to create a waste hauler vehicle license. They provide the following information: Name of company, contact name, contact information, vehicle information (license place, VIN, Gross vehicle weight, make, model, year). The license produced is color coded - (blue: recycle/compost, Orange:Landfill ...combos of both are always coded as Landfill. ) NOTE: the Landfill color codes change annually.
-The AustinCode Program Specialist uses the Case Management system to update the waste hauler vehicle license. They provide the following information: Name of company, contact name, contact information, vehicle information (license place, VIN, Gross vehicle weight, make, model, year). This normally occurs when a new vehicle for an existing company is added. The Austin Code Program Specialist updates the WasteHaulerLicense with the CertifiedMailReceipt for the distributed WasteHaulerLicenses.</td>
-</tr>
+
 
 </table>
 
