--- a/arch/code/notifyContractorToBoardAndSecure/index.html
+++ b/arch/code/notifyContractorToBoardAndSecure/index.html
@@ -70,7 +70,7 @@
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Officer uses the property information from the CodeViolationCase to create a DiagramOfWorkRequired that identifies the work the Contractor needs to complete for board and secure. The diagram includes number of open windows and fencing length.</td>
+<td>The Austin Code Officer uses the property information from the CodeViolationCase to create a DiagramOfWorkRequired that identifies the work the Contractor needs to complete for board and secure. The diagram includes number of open windows, the number of doors,  and fencing length.</td>
 </tr>
 <tr>
 <td rowspan="2">002</td>
@@ -78,7 +78,7 @@
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Officer faxes the DiagramOfWorkRequired along with property address to the Contractor (Austin Hi-Tech). The Contractor boards and/or secures the property and provides a Bill for Services. Note: A MasterAgreement with the Contractor has already been established, and rates by linear feet, painting, number of boards, etc., are pre-negotiated; ergo, only a bill is needed, not a quote.
+<td>The Austin Code Officer faxes the DiagramOfWorkRequired along with property address to the Contractor. The Contractor boards and/or secures the property and provides a Bill for Services. Note: A MasterAgreement with the Contractor has already been established, and rates by linear feet, painting, number of boards, etc., are pre-negotiated; ergo, only a bill is needed, not a quote.
 </td>
 </tr>
 <tr>
