--- a/arch/code/provideAssistanceServices/index.html
+++ b/arch/code/provideAssistanceServices/index.html
@@ -78,7 +78,7 @@
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Public Information Office Admin creates a ServiceCase (also known as a relocation case) email, which includes all assessment information from assessCitizenServiceNeeds, and sends to External Resources (other City departments).</td>
+<td>The Public Information Office Admin creates a ServiceCase (also known as a relocation case) record, which includes all assessment information from assessCitizenServiceNeeds, and sends to External Resources (other City departments).</td>
 </tr>
 <tr>
 <td rowspan="2">003</td>
