terri roberts changes

--- a/arch/code/sendNoticeOfViolation/index.html
+++ b/arch/code/sendNoticeOfViolation/index.html
@@ -106,7 +106,7 @@ If an AdministrativeHearingCitation is issued, the user updates the CodeViolatio
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Program Specialist updates the NoticeOfViolation by update the formatting, DateOfNotice and CertifiedMailNumber.</td>
+<td>The Austin Code Program Specialist updates the NoticeOfViolation by updating the formatting, DateOfNotice and CertifiedMailNumber.</td>
 </tr>
 <tr>
 <td rowspan="2">006</td>
