terri roberts changes.

--- a/arch/code/serveWarrant/index.html
+++ b/arch/code/serveWarrant/index.html
@@ -86,7 +86,7 @@
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Officer requests the APD District Representative to serve the SearchWarrant. If the APD District Representative is unavailable, an alternative APD Officer is used to serve the SearchWarrant. The APD District Representative serves the SearchWarrant within three calendar days. If the SearchWarrant isn't served within three calendar days, the SearchWarrant is not considered active and must be resigned by a Court Judge. The SearchWarrant is signed by the APD Officer serving the SearchWarrant.</tr>
+<td>The Austin Code Officer requests the APD District Representative to assist serving the SearchWarrant. If the APD District Representative is unavailable, an alternative APD Officer is used to serve the SearchWarrant. The APD District Representative serves the SearchWarrant within three calendar days. If the SearchWarrant isn't served within three calendar days, the SearchWarrant is not considered active and must be resigned by a Court Judge. The SearchWarrant is signed by the APD Officer witnessing the SearchWarrant's service.</tr>
 <tr>
 <td rowspan="2">004</td>
 <td style="font-weight: bold; background: lightgray;">Austin Code Officer/performInspection</td>
