fixed link issues

--- a/arch/pwd/index.html
+++ b/arch/pwd/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882"><head>
-<link rel="StyleSheet" href="style4.css" type="text/css"><!-- Web Browser Title -->
+<link rel="StyleSheet" href="/austinea/style/style4.css" type="text/css"><!-- Web Browser Title -->
 <title>Public Works EA Catalog</title><!--[if gte mso 9]><xml> <mso:CustomDocumentProperties> <mso:_dlc_DocId msdt:dt="string">CTM6SKM6WFAK-239-1274</mso:_dlc_DocId> <mso:_dlc_DocIdItemGuid msdt:dt="string">4b611de4-97a1-4e66-aef4-c218c2635bca</mso:_dlc_DocIdItemGuid> <mso:_dlc_DocIdUrl msdt:dt="string">http://coaspweb1/sites/CTM/EA/_layouts/15/DocIdRedir.aspx?ID=CTM6SKM6WFAK-239-1274, CTM6SKM6WFAK-239-1274</mso:_dlc_DocIdUrl> </mso:CustomDocumentProperties> </xml><![endif]--></head>
 <body>
 <h1 style="text-align: center; font-size: 20pt;">Public Works Enterprise Architecture Information </h1>
@@ -16,10 +16,10 @@ Direct: (512) 974-2960 | Mobile: (512) 296-5276
 <td align="center">
 <p style="color: gray; font-size: 7pt;">Note: Select
 image for larger view<br>
-<a href="/austinea/arch/pwd/caa.jpg"><img src="caa.jpg" border="0" width="600"></a>
+<a href="/austinea/arch/pwd/caa.png"><img src="/austinea/arch/pwd/caa.png" border="0" width="600"></a>
 </p>
 <p style="text-align: center; font-weight: bold;">Figure:
-COA Austin Public Works Capability Area Architecture</p>
+Austin Public Works Capability Area Architecture</p>
 </td>
 </tr>
 </tbody>
@@ -42,7 +42,7 @@ Information</th>
 <tr>
 <td><!-- Activity Diagrams --> 
   <ul style="margin-left: 0px; padding-left: 20px;"> <li style="font-size: 8pt;">
-    <a href="/austinea/arch/pwd/reviewConstructionDocumentSubmittals/index.html" target="usecase"> Review Construction Document Submittals</a> </ul>
+    <a href="/austinea/arch/pwd/reviewConstructionDocumentSubmittals/ad01.jpg" target="usecase"> Review Construction Document Submittals</a> </ul>
 </td>
 <td><!-- activity models -->
 <ul style="margin-left: 0px; padding-left: 20px;">
