--- a/arch/pwd/manageRequestForInformation/index.html
+++ b/arch/pwd/manageRequestForInformation/index.html
@@ -1,48 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head>
-<title>Convention Center "eCapris Logical Data Map"</title>
+<title>Manage Request For Information"</title>
 <link rel="StyleSheet" href="/austinea/style/email.css" type="text/css">
 </head>
 <body>
-
-<!-- Border Background Table -->
-<table border="0" cellpadding="4" cellspacing="0" style="border-collapse: collapse; background-color: #F4CA90;" align="center"><tr><td>
-<!-- Main Body -->
-<table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse; background-color: #ffffff;" width="600" align="center"><tr><td>
-
-<!-- Online reference -->
-<p><class="lbl">Note: This report is also <a href="/austinea/arch/pwd/report/update072214-2.html" style="font-size: 7pt;">available online</a> by following link.</p>
-
-<div>
-<p>Hi All,</p> 
-</div>
-
-<p>Attached is the current Logical Data Model for proposed changes in eCapris reviewed July 22th, 2014, with the Public Works Team. Please take a moment to check my work and let me know if there are any changes I can make to improve this, or if this requirement is as discussed! </p> <p>
-
-<p>
-
-
-<!-- Signature-->
-<table cellpadding="0" cellspacing="0" border="0" width="350" style="border-collapse: collapse;"><tr><td>
-<p>Cheers!</p>
-
-<table cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;" align="right">
-<tr>
-<td>
-<img src="/austinea/image/austinLogo.jpg" border="0" width="100" height="100" alt="Austin Logo" />
-</td>
-</tr>
-</table>
-<p><img src="http://coawss3a.coacd.org/sites/CTM/EA/Shared Documents/Images/ABSIG.JPG" border="0" width="143" height="83" alt="sign" /> </p>
-
-<p><b>Aaron Brown</b> 
-<span style="color: red; font-weight: bold;">|</span> 
-<b>City of Austin</b>
-<a href="http://www.linkedin.com/in/austnaaron"><img src="http://journeycolorado.com/images/linkedin.jpg" border="0" alt="Linkin Logo" /> </a> <br />
-Senior IT Enterprise Architect<br />
-Direct: (512) 974-2960 </p>
-Email: Aaron.Brown2@austintexas.gov </p>
-</td></tr></table>
 
 
 <!-- Use case information below -->
@@ -54,7 +15,7 @@ Email: Aaron.Brown2@austintexas.gov </p>
 <tr>
 <td align="center">
 <span class="lbl">Note: Select to download</span><br />
-<a href="/austinea/arch/pwd/report/manageRequestForInformationUseCase.jpg"><img src="/austinea/arch/pwd/report/manageRequestForInformationUseCase.jpg" border="0" width="200" alt="" /></a><br />
+<a href="/austinea/arch/pwd/manageRequestForInformation/ucd.jpg"><img src="/austinea/arch/pwd/manageRequestForInformation/ucd.jpg" border="0" width="200" alt="" /></a><br />
 <span style="font-weight: bold;">Manage Request For Information<br />Use Case</span>
 </td></tr></table>
 
@@ -66,7 +27,7 @@ The system automatically notifies the Inspector, Inspection Supervisor, Project 
 <!-- Image -  Sequence Diagram -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <p style="color: gray; font-size: 7pt;">Note: Select image for larger view<br>
-<a href="/austinea/arch/pwd/report/manageRequestForInformationSequenceDiagram01.jpg"><img src="/austinea/arch/pwd/report/manageRequestForInformationSequenceDiagram01.jpg" border="0" width="600"></a>
+<a href="/austinea/arch/pwd/manageRequestForInformation/sd01.jpg"><img src="/austinea/arch/pwd/manageRequestForInformation/sd01.jpg" border="0" width="600"></a>
 <p style="text-align: center; font-weight: bold;">Manage Request For Information</p>
 </td></tr></table> 
 
