--- a/arch/pwd/processChangeOrder/index.html
+++ b/arch/pwd/processChangeOrder/index.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head>
-<title>Convention Center "Process Change Order"</title>
-<link rel="StyleSheet" href="/austinea/style/email.css" type="text/css">
-</head>
-<body>
+<html><head><title> Process Change Order</title>
+<link rel="Stylesheet" href="/austinea/style/hover.css" type="text/css"></head>
+<body style="background-color: rgb(221, 216, 194);">
 
 <!-- Border Background Table -->
-<table border="0" cellpadding="4" cellspacing="0" style="border-collapse: collapse; background-color: #F4CA90;" align="center"><tr><td>
+<table style="border-collapse: collapse; background-color: rgb(244, 202, 144);" align="center" border="0" cellpadding="4" cellspacing="0">
+<tbody>
 <!-- Main Body -->
+<tr>
+<td><!-- Main Body -->
+<table style="border-collapse: collapse; background-color: rgb(255, 255, 255);" align="center" border="0" cellpadding="5" cellspacing="0" width="650">
+<tbody>
+<tr>
+<td style="padding: 0pt;" height="130" valign="top"><a href=""><img src="/austinea/image/iTHeader.jpg" alt="austinea.org - home..." border="0"></a></td>
+</tr>
+ <tr>
+<td>
+<p style="text-align: center; font-weight: bold;">Process Change Order<br>
+Use Case Specification</p>
+<p style="text-align: center;">01/06/16
+<!-- IF Printable document option Included <p style="text-align: center;">download <a href="/austinea/arch/as/***.docx">printable version</a> -- > <b> Animal Services Logical Data Model </b> <!-- Image - Logical Data Model <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center"> <p style="color: gray; font-size: 7pt;">Note: Select image for larger view<br> <a href="/austinea/arch/as/ldm.jpg"><img src="/austinea/arch/as/ldm.jpg" border="0" width="600"></a> <p style="text-align: center; font-weight: bold;">Animal Services Logical Data Model</p> </td></tr></table> --><!-- USE CASE IMAGE -->
+<table style="border-collapse: collapse;" align="center" border="0" cellpadding="5" cellspacing="0">
+<tbody>
+<tr>
+<td align="center"><span class="lbl">Select
+to enlarge...</span><br>
+<a href="/austinea/arch/pwd/processChangeOrder/ucd.jpg"><img src="/austinea/arch/pwd/processChangeOrder/ucd.jpg" alt="" border="0"></a><br>
+<span style="font-weight: bold;">Process Change Order<br>
+Use Case Model</span>
+</td>
+</tr>
+</tbody>
+</table>
 
-
+ 
+ 
+ 
 <!-- Use case information below -->
 
 <hr>
 
-<!-- Muni Court Requirements Model -->
-<table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="right">
-<tr>
-<td align="center">
-<span class="lbl">Note: Select to download</span><br />
-<a href="/austinea/arch/pwd/processChangeOrder/ucd.jpg"><img src="/austinea/arch/pwd/processChangeOrder/ucd.jpg" border="0" width="200" alt="" /></a><br />
-<span style="font-weight: bold;">Process Change Order<br />Use Case</span>
-</td></tr></table>
-
-
-<p><b>Use Case Scope</b></p>
+<p><b>Scope:</b></p>
 <p>Either the Contractor or the Inspector (the Change Order Creator) determine there is a need for a change order. One of them accesses the system and inputs the change order information associated with a CIP Id. The Change Order Creator They both sign the change order and hand off to the Inspection Supervisor for their approval. The System routes to each person in the chain of command for their respective approvals. The System notifies the next person in the chain their time to approve the change order has come, when the previous person approves the change order. The system provides a mechanism do assign a date/time and signature, indicating approval. The System will offer the approval in the following order: Inspector, Inspector Supervisor, Design Professional, Project Manager, Sponsor, Sponsor's Financial Representative, Project Manager Supervisor, COA Sponsors & External Sponsors, and Contract Management. </p> <p>
 The system sends notification to the project manager upon Contract Management Division approval. The Project Manager is notified that money is encumbered to FDU's, associated with the change order. 
 The Project manager examines eCapris (COA Financial System) to guarantee the encumbered values match as a form of verification. </p>
