--- a/arch/pwd/manageRequestForInformation/index.html
+++ b/arch/pwd/manageRequestForInformation/index.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head>
-<title>Manage Request For Information"</title>
-<link rel="StyleSheet" href="/austinea/style/email.css" type="text/css">
-</head>
-<body>
+<html><head><title> Process Change Order</title>
+<link rel="Stylesheet" href="/austinea/style/hover.css" type="text/css"></head>
+<body style="background-color: rgb(221, 216, 194);">
 
-
-<!-- Use case information below -->
-
-<hr>
-
-<!-- Muni Court Requirements Model -->
-<table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="right">
+<!-- Border Background Table -->
+<table style="border-collapse: collapse; background-color: rgb(244, 202, 144);" align="center" border="0" cellpadding="4" cellspacing="0">
+<tbody>
+<!-- Main Body -->
 <tr>
-<td align="center">
-<span class="lbl">Note: Select to download</span><br />
-<a href="/austinea/arch/pwd/manageRequestForInformation/ucd.jpg"><img src="/austinea/arch/pwd/manageRequestForInformation/ucd.jpg" border="0" width="200" alt="" /></a><br />
-<span style="font-weight: bold;">Manage Request For Information<br />Use Case</span>
-</td></tr></table>
+<td><!-- Main Body -->
+<table style="border-collapse: collapse; background-color: rgb(255, 255, 255);" align="center" border="0" cellpadding="5" cellspacing="0" width="650">
+<tbody>
+<tr>
+<td style="padding: 0pt;" height="130" valign="top"><a href=""><img src="/austinea/image/iTHeader.jpg" alt="austinea.org - home..." border="0"></a></td>
+</tr>
+ <tr>
+<td>
+<p style="text-align: center; font-weight: bold;">Manage Request For Information<br>
+Use Case Specification</p>
+<p style="text-align: center;">01/06/16
+<!-- IF Printable document option Included <p style="text-align: center;">download <a href="/austinea/arch/as/***.docx">printable version</a> -- > <b> Animal Services Logical Data Model </b> <!-- Image - Logical Data Model <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center"> <p style="color: gray; font-size: 7pt;">Note: Select image for larger view<br> <a href="/austinea/arch/as/ldm.jpg"><img src="/austinea/arch/as/ldm.jpg" border="0" width="600"></a> <p style="text-align: center; font-weight: bold;">Animal Services Logical Data Model</p> </td></tr></table> --><!-- USE CASE IMAGE -->
+<table style="border-collapse: collapse;" align="center" border="0" cellpadding="5" cellspacing="0">
+<tbody>
+<tr>
+<td align="center"><span class="lbl">Select
+to enlarge...</span><br>
+<a href="/austinea/arch/pwd/manageRequestForInformation/ucd.jpg"><img src="/austinea/arch/pwd/manageRequestForInformation/ucd.jpg" alt="" border="0"></a><br>
+<span style="font-weight: bold;">Manage Request For Information<br>
+Use Case Model</span>
+</td>
+</tr>
+</tbody>
+</table>
 
 
-<p><b>Use Case Scope</b></p>
+<p><b>Scope:</b></p>
 <p>The Contractor accesses the system , and chooses to send a Request for Information or chooses to select an existing Request for information and add a response. The System assigns a sequential unique number if this is a new Request, and provides a screen for the contractor to specify their inquiry. The system tracks all relevant information like date submitted, submitted by whom, Date responded, date resubmitted.
 The system automatically notifies the Inspector, Inspection Supervisor, Project Manager, Sponsor, Inspection field Engineer, and Consultant that a Request has been initiated. Each may provide a comment via the system, until the Project Manager deems the answer complete. At this point, the System records the date the response is issued, and sends notification to the Contractor indicating their requested information is now available on the system. </p>
 
