--- a/arch/pwd/publishDailyReport/index.html
+++ b/arch/pwd/publishDailyReport/index.html
@@ -1,80 +1,51 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head>
-<title>Convention Center "Publish Daily Report</title>
-<link rel="StyleSheet" href="/austinea/style/email.css" type="text/css">
-</head>
-<body>
+<html><head><title> Publish Daily Report</title>
+<link rel="Stylesheet" href="/austinea/style/hover.css" type="text/css"></head>
+<body style="background-color: rgb(221, 216, 194);">
 
 <!-- Border Background Table -->
-<table border="0" cellpadding="4" cellspacing="0" style="border-collapse: collapse; background-color: #F4CA90;" align="center"><tr><td>
+<table style="border-collapse: collapse; background-color: rgb(244, 202, 144);" align="center" border="0" cellpadding="4" cellspacing="0">
+<tbody>
 <!-- Main Body -->
-<table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse; background-color: #ffffff;" width="600" align="center"><tr><td>
-
-<!-- Online reference -->
-<p><class="lbl">Note: This report is also <a href="/austinea/arch/pwd/report/update040314.html" style="font-size: 7pt;">available online</a> by following link.</p>
-
-<div>
-<p>Hi All,</p> 
-</div>
-
-<p>Attached is the information for the "Publish Daily Report" use case that was reviewed last week with the Public Works Team. Please take a moment to check my work and let me know if there are any changes I can make to improve this, or if this requirement is as discussed! 
-<p>
-
-
-<!-- Signature-->
-<table cellpadding="0" cellspacing="0" border="0" width="350" style="border-collapse: collapse;"><tr><td>
-<p>Cheers!</p>
-
-<table cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;" align="right">
 <tr>
+<td><!-- Main Body -->
+<table style="border-collapse: collapse; background-color: rgb(255, 255, 255);" align="center" border="0" cellpadding="5" cellspacing="0" width="650">
+<tbody>
+<tr>
+<td style="padding: 0pt;" height="130" valign="top"><a href=""><img src="/austinea/image/iTHeader.jpg" alt="austinea.org - home..." border="0"></a></td>
+</tr>
+ <tr>
 <td>
-<img src="/austinea/image/austinLogo.jpg" border="0" width="100" height="100" alt="Austin Logo" />
+<p style="text-align: center; font-weight: bold;">Publish Daily Report<br>
+Use Case Specification</p>
+<p style="text-align: center;">01/06/16
+<!-- IF Printable document option Included <p style="text-align: center;">download <a href="/austinea/arch/as/***.docx">printable version</a> -- > <b> Animal Services Logical Data Model </b> <!-- Image - Logical Data Model <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center"> <p style="color: gray; font-size: 7pt;">Note: Select image for larger view<br> <a href="/austinea/arch/as/ldm.jpg"><img src="/austinea/arch/as/ldm.jpg" border="0" width="600"></a> <p style="text-align: center; font-weight: bold;">Animal Services Logical Data Model</p> </td></tr></table> --><!-- USE CASE IMAGE -->
+<table style="border-collapse: collapse;" align="center" border="0" cellpadding="5" cellspacing="0">
+<tbody>
+<tr>
+<td align="center"><span class="lbl">Select
+to enlarge...</span><br>
+<a href="/austinea/arch/pwd/publishDailyReport/ucd.jpg"><img src="/austinea/arch/pwd/publishDailyReport/ucd.jpg" alt="" border="0"></a><br>
+<span style="font-weight: bold;">Publish Daily Report<br>
+Use Case Model</span>
 </td>
 </tr>
+</tbody>
 </table>
-<p><img src="http://coawss3a.coacd.org/sites/CTM/EA/Shared Documents/Images/ABSIG.JPG" border="0" width="143" height="83" alt="sign" /> </p>
-
-<p><b>Aaron Brown</b> 
-<span style="color: red; font-weight: bold;">|</span> 
-<b>City of Austin</b>
-<a href="http://www.linkedin.com/in/austnaaron"><img src="http://journeycolorado.com/images/linkedin.jpg" border="0" alt="Linkin Logo" /> </a> <br />
-Senior IT Enterprise Architect<br />
-Direct: (512) 974-2960 </p>
-Email: Aaron.Brown2@austintexas.gov </p>
-</td></tr></table>
 
 
-<!-- Use case information below -->
-
-<hr>
-
-<!--  Requirements Model -->
-<table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="right">
-<tr>
-<td align="center">
-<span class="lbl">Note: Select to download</span><br />
-<a href="/austinea/arch/pwd/report/publishDailyReportUseCase.jpg"><img src="/austinea/arch/pwd/report/publishDailyReportUseCase.jpg" border="0" width="200" alt="" /></a><br />
-<span style="font-weight: bold;">Publish Daily Report<br />Use Case</span>
-</td></tr></table>
 
 
-<p><b>Use Case Scope</b></p>
+<p><b>Scope:</b></p>
 <p>Populate a standardized form that captures project data in the form of weather, equipment inventory, number of workers, visitors, test results data and descriptive text. The Form is filled out by the Inspector and vetted by Supervisors, Field Engineers, Engineering Technicians and Administrative Assistants. </p>
 
-
-<!-- Image - Logical Data Model -->
-<table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
-<p style="color: gray; font-size: 7pt;">Note: Select image for larger view<br>
-<a href="/austinea/arch/pwd/report/PWDLogicalDataModel2.jpg"><img src="/austinea/arch/pwd/report/PWDLogicalDataModel2.jpg" border="0" width="600"></a>
-<p style="text-align: center; font-weight: bold;">Public Works Logical Data Model</p>
-</td></tr></table> 
 
 <hr>
 
 <!-- Image - File For Motion Sequence Diagram -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <p style="color: gray; font-size: 7pt;">Note: Select image for larger view<br>
-<a href="/austinea/arch/pwd/report/publishDailyReportSequenceDiagram01.jpg"><img src="/austinea/arch/pwd/report/publishDailyReportSequenceDiagram01.jpg" border="0" width="600"></a>
+<a href="/austinea/arch/pwd/publishDailyReport/sd01.jpg"><img src="/austinea/arch/pwd/publishDailyReport/sd01.jpg" border="0" width="600"></a>
 <p style="text-align: center; font-weight: bold;">Publish Daily Report Sequence Diagram</p>
 </td></tr></table> 
 
