--- a/arch/pwd/publishDailyReport/index.html
+++ b/arch/pwd/publishDailyReport/index.html
@@ -79,7 +79,7 @@ List of approved sub-contractors
 [Beginning of report body] Count of how many are on site (superintendent, safety rep, foreman, operators, laborers), note weather, high temp, low temp, time work started, time work ended, if shoring was used and type of shoring, check traffic control (AM & PM), check environmental controls. Verify that traffic controls are set (yes or no).
 In the body of the daily report there is an itemized list providing pay item, quantity, description of work, location or station. Additionally, there is an itemized equipment list providing the equipment letter, hours in use, and hours in standby. A testing section contains an itemized list of types of test performed, location/station of test, results of test, pass or fail for test(s).
 The overall daily report contains a remarks section which is a written account of verbal instructions, problems, work delayed and reason, utility relocation work or conflicts, miscellaneous remarks pertinent to work, and visitors to project.
-Lastly there are two signature blocks: one for the Inspector, and one for the Inspection Supervisor. <a href="/austinea/arch/pwd/report/PWDLogicalDataModel2.jpg">See Logical Data Model for items described above</a>
+Lastly there are two signature blocks: one for the Inspector, and one for the Inspection Supervisor. <a href="/austinea/arch/pwd/ldm.jpg">See Logical Data Model for items described above</a>
 </td> </tr>
 <tr>
 <td>Administer Capital Constuction Data/ <br /> addDailyReportInfoToProject</td> <td>The Inspector accesses the system, specifies the project, selects a day or date range, and adds Daily Report information as necessary. </td> </tr>
