--- a/arch/pwd/submitPayApplicationContractPayment/index.html
+++ b/arch/pwd/submitPayApplicationContractPayment/index.html
@@ -1,82 +1,52 @@
+     
+134 lines (92 sloc)  14.5 KB
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head>
-<title>Public Works "Submit Pay Application Contract Payment</title>
-<link rel="StyleSheet" href="/austinea/style/email.css" type="text/css">
-</head>
-<body>
+<html><head><title> Submit Pay Application Contract Payment</title>
+<link rel="Stylesheet" href="/austinea/style/hover.css" type="text/css"></head>
+<body style="background-color: rgb(221, 216, 194);">
 
 <!-- Border Background Table -->
-<table border="0" cellpadding="4" cellspacing="0" style="border-collapse: collapse; background-color: #F4CA90;" align="center"><tr><td>
+<table style="border-collapse: collapse; background-color: rgb(244, 202, 144);" align="center" border="0" cellpadding="4" cellspacing="0">
+<tbody>
 <!-- Main Body -->
-<table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse; background-color: #ffffff;" width="600" align="center"><tr><td>
-
-<!-- Online reference -->
-<p><class="lbl">Note: This report is also <a href="/austinea/arch/pwd/report/update031914.html" style="font-size: 7pt;">available online</a> by following link.</p>
-
-<div>
-<p>Hi All,</p> 
-</div>
-
-<p>Attached is the information for the "Submit Pay Application Contract Payment" use case that was reviewed last week with the Public Works Team. Please take a moment to check my work and let me know if there are any changes I can make to improve this, or if this requirement is as discussed! 
-<p>
-
-
-<!-- Signature-->
-<table cellpadding="0" cellspacing="0" border="0" width="350" style="border-collapse: collapse;"><tr><td>
-<p>Cheers!</p>
-
-<table cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;" align="right">
 <tr>
+<td><!-- Main Body -->
+<table style="border-collapse: collapse; background-color: rgb(255, 255, 255);" align="center" border="0" cellpadding="5" cellspacing="0" width="650">
+<tbody>
+<tr>
+<td style="padding: 0pt;" height="130" valign="top"><a href=""><img src="/austinea/image/iTHeader.jpg" alt="austinea.org - home..." border="0"></a></td>
+</tr>
+ <tr>
 <td>
-<img src="/austinea/image/austinLogo.jpg" border="0" width="100" height="100" alt="Austin Logo" />
+<p style="text-align: center; font-weight: bold;">Process Change Order<br>
+Use Case Specification</p>
+<p style="text-align: center;">01/06/16
+<!-- IF Printable document option Included <p style="text-align: center;">download <a href="/austinea/arch/as/***.docx">printable version</a> -- > <b> Animal Services Logical Data Model </b> <!-- Image - Logical Data Model <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center"> <p style="color: gray; font-size: 7pt;">Note: Select image for larger view<br> <a href="/austinea/arch/as/ldm.jpg"><img src="/austinea/arch/as/ldm.jpg" border="0" width="600"></a> <p style="text-align: center; font-weight: bold;">Animal Services Logical Data Model</p> </td></tr></table> --><!-- USE CASE IMAGE -->
+<table style="border-collapse: collapse;" align="center" border="0" cellpadding="5" cellspacing="0">
+<tbody>
+<tr>
+<td align="center"><span class="lbl">Select
+to enlarge...</span><br>
+<a href="/austinea/arch/pwd/submitPayApplicationContractPayment/ucd.jpg"><img src="/austinea/arch/pwd/submitPayApplicationContractPayment/ucd.jpg" alt="" border="0"></a><br>
+<span style="font-weight: bold;">Submit Pay Application Contract Payment<br>
+Use Case Model</span>
 </td>
 </tr>
+</tbody>
 </table>
-<p><img src="http://coawss3a.coacd.org/sites/CTM/EA/Shared Documents/Images/ABSIG.JPG" border="0" width="143" height="83" alt="sign" /> </p>
-
-<p><b>Aaron Brown</b> 
-<span style="color: red; font-weight: bold;">|</span> 
-<b>City of Austin</b>
-<a href="http://www.linkedin.com/in/austnaaron"><img src="http://journeycolorado.com/images/linkedin.jpg" border="0" alt="Linkin Logo" /> </a> <br />
-Senior IT Enterprise Architect<br />
-Direct: (512) 974-2960 </p>
-Email: Aaron.Brown2@austintexas.gov </p>
-</td></tr></table>
 
 
-<!-- Use case information below -->
-
-<hr>
-
-<!--  Requirements Model -->
-<table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="right">
-<tr>
-<td align="center">
-<span class="lbl">Note: Select to download</span><br />
-<a href="/austinea/arch/pwd/report/SubmitPayApplicationContractPaymentUseCase.jpg"><img src="/austinea/arch/pwd/report/SubmitPayApplicationContractPaymentUseCase.jpg" border="0" width="200" alt="" /></a><br />
-<span style="font-weight: bold;">Submit Pay Application Contract Payment<br />Use Case</span>
-</td></tr></table>
-
-
-<p><b>Use Case Scope</b></p>
+<p><b>Scope</b></p>
 <p>The Contractor submits a draft Pay Application for requesting payment. The Inspector reviews the Pay application and compares it to the Quantity Book. Materials on Hand, Statement of Deductions, Contract Time Statement, and Recapitulation Sheet are supporting documents required with the Pay Application. 
 </p> <p>
 If there are discrepancies, the Draft Pay Application is returned to the Contractor for modification/correction and resubmission. When the Inspector approves the Pay Application, the Inspection Supervisor reviews and compares it to the Quantity Book and approves it. The Project Manager reviews (such as Progress Schedule or other pertentant items) and approves. Contract Management handles the Subcontractor Compliance Report (SubK) for compliance metrics (Small Minority Business Resources SMBR). The Pay Application is reviewed by Accounts Payable for submittal to Controller for payment.</p>
-
-
-<!-- Image - Logical Data Model -->
-<table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
-<p style="color: gray; font-size: 7pt;">Note: Select image for larger view<br>
-<a href="/austinea/arch/pwd/report/PWDLogicalDataModel2.jpg"><img src="/austinea/arch/pwd/report/PWDLogicalDataModel2.jpg" border="0" width="600"></a>
-<p style="text-align: center; font-weight: bold;">CIP Logical Data Model</p>
-</td></tr></table> 
 
 <hr>
 
 <!-- Image - File For Motion Sequence Diagram -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <p style="color: gray; font-size: 7pt;">Note: Select image for larger view<br>
-<a href="/austinea/arch/pwd/report/SubmitPayApplicationContractPaymentSequenceDiagram02X.jpg"><img src="/austinea/arch/pwd/report/SubmitPayApplicationContractPaymentSequenceDiagram02X.jpg" border="0" width="600"></a>
+<a href="/austinea/arch/pwd/submitPayApplicationContractPayment/sd01.jpg"><img src="/austinea/arch/pwd/submitPayApplicationContractPayment/sd01.jpg" border="0" width="600"></a>
 <p style="text-align: center; font-weight: bold;">Submit Pay Application Contract Payment Sequence Diagram</p>
 </td></tr></table> 
 
@@ -95,7 +65,7 @@ Recapitulation Sheet comprising of: Project Name, Department, FDU, Contractor na
 'material on hand' document comprising of: Project name, Department, FDU, Contractor name, Contractor address, CT number, CIP ID Number, Estimate number, Date, FDU Invoice no. with an embedded table with a Payout Number for each item listed by row, each column is (A)$ value materials stored for this period, (B)$ value of materials stored at the beginning of the period, (C)$ value of materials installed this period, (A+B-C)total $ value of material now stored. The bottom has a total. and disclaimer. and signatures. Additionally there is a Statement of deduction comprising of:Project name, CT number, Date, Estimate number, Reason for deduction and amount, Total Deductions to date, Statement of time, Statement period (from / to), Project name, FDU(s), Contractor name, Contractor address, Estimate number,Date, accumulative days charged, daily inspection hours, reason for credit day, Number of days
 balance to be forwarded, Footer , no. contract working days (could be Calendar days as well, this is a specification - applies to all values on all forms...this is contractually specified), substantial/final,  date / time charges started, No. days overrun, Liquidated damages this period, No. days used. , date work substantially complete liquidated damages per day, accumulative liquidated damages, signature: (prepared by, contractor, inspector)
 The System summaries all charges by FDU. The contractor submits the Pay Application for consideration. 
-NOTE: Pay Application is the Master packet, included as a Composite of the all items listed above. Some items are only submitted as part of the final Payment Application. <a href="/austinea/arch/pwd/report/PWDLogicalDataModel3.jpg">See Logical Data Model for items described above</a>
+NOTE: Pay Application is the Master packet, included as a Composite of the all items listed above. Some items are only submitted as part of the final Payment Application. <a href="/austinea/arch/pwd/ldm.jpg">See Logical Data Model for items described above</a>
 </td> </tr>
 <tr>
 <td>Inspector/ <br /> reviewPayApplication</td> <td>The Inspector accesses the system and compares the project Quantity book to the body of the Pay application being submitted and verifies the information. The Inspector ensures required attachments are present. Reviews the 'Material on Hand' and Time Statements and signs off on their accuracy. They check the 'statement of deductions', confirms all head information is correct, and approves or rejects as appropriate. </td> </tr>
