--- a/arch/pwd/submitPayApplicationContractPayment/index.html
+++ b/arch/pwd/submitPayApplicationContractPayment/index.html
@@ -1,5 +1,3 @@
-     
-134 lines (92 sloc)  14.5 KB
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title> Submit Pay Application Contract Payment</title>
 <link rel="Stylesheet" href="/austinea/style/hover.css" type="text/css"></head>
@@ -18,7 +16,7 @@
 </tr>
  <tr>
 <td>
-<p style="text-align: center; font-weight: bold;">Process Change Order<br>
+<p style="text-align: center; font-weight: bold;">Submit Pay Application Contract Payment<br>
 Use Case Specification</p>
 <p style="text-align: center;">01/06/16
 <!-- IF Printable document option Included <p style="text-align: center;">download <a href="/austinea/arch/as/***.docx">printable version</a> -- > <b> Animal Services Logical Data Model </b> <!-- Image - Logical Data Model <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center"> <p style="color: gray; font-size: 7pt;">Note: Select image for larger view<br> <a href="/austinea/arch/as/ldm.jpg"><img src="/austinea/arch/as/ldm.jpg" border="0" width="600"></a> <p style="text-align: center; font-weight: bold;">Animal Services Logical Data Model</p> </td></tr></table> --><!-- USE CASE IMAGE -->
