--- a/arch/pwd/index.html
+++ b/arch/pwd/index.html
@@ -57,7 +57,7 @@ Information</th>
 </td>
 <td><!-- Sequence Diagrams -->
 <ul style="margin-left: 0px; padding-left: 20px;">
-<li style="font-size: 8pt;"><a href="/austinea/arch/pwd/manageRequestForInformation/index.html" target="usecase"> Manage Request For Information </a>
+<li style="font-size: 8pt;"><a href="/austinea/arch/pwd/manageContractorRequest/index.html" target="usecase"> Manage Contractor Request </a>
 </li>
 <li style="font-size: 8pt;"><a href="/austinea/arch/pwd/processChangeOrder/index.html" target="usecase"> Process Change Order </a>
 </li>
