--- a/arch/pwd/manageContractorRequest/index.html
+++ b/arch/pwd/manageContractorRequest/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title> Process Change Order</title>
+<html><head><title> Manage Contractor Request</title>
 <link rel="Stylesheet" href="/austinea/style/hover.css" type="text/css"></head>
 <body style="background-color: rgb(221, 216, 194);">
 
@@ -16,7 +16,7 @@
 </tr>
  <tr>
 <td>
-<p style="text-align: center; font-weight: bold;">Manage Request For Information<br>
+<p style="text-align: center; font-weight: bold;">Manage Contractor Request<br>
 Use Case Specification</p>
 <p style="text-align: center;">07/22/14
 <!-- IF Printable document option Included <p style="text-align: center;">download <a href="/austinea/arch/as/***.docx">printable version</a> -- > <b> Animal Services Logical Data Model </b> <!-- Image - Logical Data Model <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center"> <p style="color: gray; font-size: 7pt;">Note: Select image for larger view<br> <a href="/austinea/arch/as/ldm.jpg"><img src="/austinea/arch/as/ldm.jpg" border="0" width="600"></a> <p style="text-align: center; font-weight: bold;">Animal Services Logical Data Model</p> </td></tr></table> --><!-- USE CASE IMAGE -->
@@ -25,8 +25,8 @@ Use Case Specification</p>
 <tr>
 <td align="center"><span class="lbl">Select
 to enlarge...</span><br>
-<a href="/austinea/arch/pwd/manageRequestForInformation/ucd.jpg"><img src="/austinea/arch/pwd/manageRequestForInformation/ucd.jpg" alt="" border="0"></a><br>
-<span style="font-weight: bold;">Manage Request For Information<br>
+<a href="/austinea/arch/pwd/manageContractorRequest/ucd.jpg"><img src="/austinea/arch/pwd/manageContractorRequest/ucd.jpg" alt="" border="0"></a><br>
+<span style="font-weight: bold;">Manage Contractor Request<br>
 Use Case Model</span>
 </td>
 </tr>
@@ -41,13 +41,13 @@ The system automatically notifies the Inspector, Inspection Supervisor, Project 
 <!-- Image -  Sequence Diagram -->
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
 <p style="color: gray; font-size: 7pt;">Note: Select image for larger view<br>
-<a href="/austinea/arch/pwd/manageRequestForInformation/sd01.jpg"><img src="/austinea/arch/pwd/manageRequestForInformation/sd01.jpg" border="0" width="600"></a>
-<p style="text-align: center; font-weight: bold;">Manage Request For Information</p>
+<a href="/austinea/arch/pwd/manageContractorRequest/sd01.jpg"><img src="/austinea/arch/pwd/manageContractorRequest/sd01.jpg" border="0" width="600"></a>
+<p style="text-align: center; font-weight: bold;">Manage Contractor Request</p>
 </td></tr></table> 
 
 
 
-<p style="font-weight: bold; text-align: center;">Manage Request For Information Interface Descriptions</p>
+<p style="font-weight: bold; text-align: center;">Manage Contractor Request Interface Descriptions</p>
 <!-- Table definition -->
 <table align="center" id="custom">
 <tr><th width="195">Type/Interface</th><th>Description</th></tr>
