--- a/arch/municourt/uploadDialerNotices/index.html
+++ b/arch/municourt/uploadDialerNotices/index.html
@@ -112,7 +112,8 @@ XML file format (example for STPP):<br>&nbsp;<br>
 &lt;UseExpiration&gt;true&lt;/UseExpiration&gt;<br>
 &lt;MinRetryDuration&gt;ThirtyMinutes&lt;/MinRetryDuration&gt;<br>
 &lt;Message&gt;This is the Austin Municipal Court calling [[name]] advising that a payment is past due for payment plan account number [[payacctnbr]]. Make your payment immediately online, visit W W W dot Austin Texas dot gov slash public or call [[clerk]] between 8 a m and 5 p m&lt;/Message&gt;<br>
-&lt;/Configuration&gt;<br>
+&lt;/Configuration&gt;<br>&nbsp;<br>
+General Dialer XML Schema:<br>
 &lt;?xml version="1.0" encoding="utf-8"?&gt;<br>
 &lt;xs:schema attributeFormDefault="unqualified" elementFormDefault="qualified" xmlns:xs="http://www.w3.org/2001/XMLSchema"&gt;<br>
   &lt;xs:element name="Broadcast"&gt;<br>
