--- a/arch/municourt/changeCaseStatus/index.html
+++ b/arch/municourt/changeCaseStatus/index.html
@@ -77,7 +77,7 @@ email or text) sent to the defendant.
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Defendant either complies or fails to comply with appearances, payments and sentencing guidelines mandated the law on their case. 
+<td>The Defendant either complies or fails to comply with appearances, payments and sentencing guidelines mandated by law on their case. 
 The case management system monitors the Defendant's compliance by keeping track of appearance dates, payments and the Defendant's timely 
 filing proof of sentence completion.
 </td>
